# nametag

./: .envrc  .gitignore  .gitmodules  Pipfile  mystery_hunt.toml  pyproject.toml  scan.txt  stupid.tagsetup  tmp.txt
apps/bluez_rpi/: bluez_5.61-1_armhf.deb
arduino/: arduino.py
arduino/bluetalk/: bluetalk.ino
art/: aseprite_import.py  load_aseprite.py  lobby_1.py  make_emoji_links.py  make_lobby_intro.py
art/emoji/: hammer.ase  moon.ase  slightly_smiling.ase  star.ase  star_struck.ase  victory_hand.ase
art/font-big/:  .ase  ".ase  '.ase  (.ase  ).ase  +.ase  -.ase  ..ase  =.ase  ?.ase  @.ase  A.ase  B.ase  C.ase  D.ase  E.ase  F.ase  G.ase  H.ase  I.ase  J.ase  K.ase  L.ase  M.ase  (+15 more)
bluefruit/: ardi.json  bluefruit.ino
bluez/: libreadline8_8.1-2_armhf.deb
config/: settings.toml
lobby_game/: game_logic.py  game_station.py  game_test.py  handout_emoji_teams.py  handout_team_emoji.py  nametags.toml  render_emoji_teams.py  render_game.py  render_word_game.py  render_word_text.py  stash_state.py  station_test.py  tag_data.py  testtags.toml
mystery_hunt/: rebus.txt
nametag/: aseprite_loader.py  bluefruit.py  bluetooth.py  config.py  logging.py  logging_setup.py  old.protocol.py  protocol.py  scanner.py
tools/: apk_json_frames.py  ase_convert.py  ase_info.py  ase_to_image.py  ase_to_png.py  bluefruit_spam.py  btle_scan.py  check_code.py  dev_setup.py  nametag_bulk_send.py  nametag_clock.py  nametag_handout.py  nametag_rssi.py  nametag_send.py  nametag_stash_test.py  nametag_time_rssi.py  old.nametag_send.py  send.py  serial_spam.py  systemd_install.py
(+185 files in other folders)
